--- a/rancid/bin/ciscowlc.in
+++ b/rancid/bin/ciscowlc.in
@@ -1,33 +1,64 @@
-#! /usr/bin/perl
+#! @PERLV_PATH@
 ##
-## Copyright (C) 1997-2004 by Terrapin Communications, Inc.
+## $Id: nxrancid.in 2818 2014-04-24 21:18:44Z heas $
+##
+## @PACKAGE@ @VERSION@
+## Copyright (c) @COPYYEARS@ by Terrapin Communications, Inc.
 ## All rights reserved.
 ##
-## This software may be freely copied, modified and redistributed
-## without fee for non-commerical purposes provided that this license
-## remains intact and unmodified with any RANCID distribution.
+## This code is derived from software contributed to and maintained by
+## Terrapin Communications, Inc. by Henry Kilmer, John Heasley, Andrew Partan,
+## Pete Whiting, Austin Schutz, and Andrew Fort.
 ##
-## There is no warranty or other guarantee of fitness of this software.
-## It is provided solely "as is".  The author(s) disclaim(s) all
-## responsibility and liability with respect to this software's usage
-## or its effect upon hardware, computer systems, other software, or
-## anything else.
+## Redistribution and use in source and binary forms, with or without
+## modification, are permitted provided that the following conditions
+## are met:
+## 1. Redistributions of source code must retain the above copyright
+##    notice, this list of conditions and the following disclaimer.
+## 2. Redistributions in binary form must reproduce the above copyright
+##    notice, this list of conditions and the following disclaimer in the
+##    documentation and/or other materials provided with the distribution.
+## 3. All advertising materials mentioning features or use of this software
+##    must display the following acknowledgement:
+##        This product includes software developed by Terrapin Communications,
+##        Inc. and its contributors for RANCID.
+## 4. Neither the name of Terrapin Communications, Inc. nor the names of its
+##    contributors may be used to endorse or promote products derived from
+##    this software without specific prior written permission.
+## 5. It is requested that non-binding fixes and modifications be contributed
+##    back to Terrapin Communications, Inc.
 ##
-## Except where noted otherwise, rancid was written by and is maintained by
-## Henry Kilmer, John Heasley, Andrew Partan, Pete Whiting, and Austin Schutz.
-##
+## THIS SOFTWARE IS PROVIDED BY Terrapin Communications, INC. AND CONTRIBUTORS
+## ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+## TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+## PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE COMPANY OR CONTRIBUTORS
+## BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+## CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+## SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+## INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+## CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+## POSSIBILITY OF SUCH DAMAGE.
 #
+#  RANCID - Really Awesome New Cisco confIg Differ
 #
-# Modified from ciscoips by Josh Yost 
-# Created on 4/16/2008 
+# usage: ciscowlc [-dltCV] [-f filename | hostname]
+#
+# Modified from ciscoips by Josh Yost
+# Created on 4/16/2008
 #
 #  This is meant to try handle Cisco's WLCs V4.X and on
 #
 #  RANCID - Really Awesome New Cisco confIg Differ
 #
 # usage: ciscowlc [-d] [-l] [-f filename | $host]
+#
 use Getopt::Std;
-getopts('dfl');
+getopts('dflt:CV');
+if ($opt_V) {
+    print "@PACKAGE@ @VERSION@\n";
+    exit(0);
+}
 $log = $opt_l;
 $debug = $opt_d;
 $file = $opt_f;
@@ -168,8 +199,8 @@ print STDERR "    In ShowConfig: $_" if ($debug);
 
         last if (/^$prompt/);
         next if (/^(\s*|\s*$cmd\s*)$/);
-        if ( ! /^$prompt/) { 
-                if ( ! $skipprocess ) { 
+        if ( ! /^$prompt/) {
+                if ( ! $skipprocess ) {
                         print STDOUT "      ShowConfig Data: $_" if ($debug);
                         ProcessHistory("","","","$_");
                 }
@@ -181,10 +212,10 @@ print STDERR "    In ShowConfig: $_" if ($debug);
     return(0);
 }
 
-# This routine parses "show sysinfo" 
+# This routine parses "show sysinfo"
 sub ShowSysinfo {
     print STDERR "    In ShowSysinfo: $_" if ($debug);
-    ProcessHistory("","","","\n!WLC Show Sysinfo Start\n!\n"); 
+    ProcessHistory("","","","\n!WLC Show Sysinfo Start\n!\n");
 
     while (<INPUT>) {
 	tr/\015//d;
@@ -197,14 +228,14 @@ sub ShowSysinfo {
 
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	if ( ! /^$prompt/) { 
-		if ( ! $skipprocess ) { 
+	if ( ! /^$prompt/) {
+		if ( ! $skipprocess ) {
 			print STDOUT "      ShowSysinfo Data: $_" if ($debug);
-			ProcessHistory("","","","! $_"); 
+			ProcessHistory("","","","! $_");
 		}
 	}
     }
-    ProcessHistory("","","","!\n!WLC Show Sysinfo End\n"); 
+    ProcessHistory("","","","!\n!WLC Show Sysinfo End\n");
     print STDERR "    Exiting ShowSysinfo: $_" if ($debug);
     return(0);
 }
@@ -251,6 +282,20 @@ sub DoNothing {print STDOUT;}
 
 $cisco_cmds=join(";",@commands);
 $cmds_regexp=join("|",@commands);
+
+if (length($host) == 0) {
+    if ($file) {
+	print(STDERR "Too few arguments: file name required\n");
+	exit(1);
+    } else {
+	print(STDERR "Too few arguments: host name required\n");
+	exit(1);
+    }
+}
+if ($opt_C) {
+    print "clogin -t $timeo -c\'$commandstr\' $host\n";
+    exit(0);
+}
 
 open(OUTPUT,">$host.new") || die "Can't open $host.new for writing: $!\n";
 select(OUTPUT);
