--- a/rancid/bin/wlogin.in
+++ b/rancid/bin/wlogin.in
@@ -1,25 +1,46 @@
-#! /usr/bin/expect --
+#! @EXPECT_PATH@ --
 ##
-## $Id: clogin.in,v 1.94 2006/04/28 15:37:40 heas Exp $
+## $Id: clogin.in 2854 2014-07-29 12:48:43Z heas $
 ##
-## Copyright (C) 1997-2004 by Terrapin Communications, Inc.
+## @PACKAGE@ @VERSION@
+## Copyright (c) @COPYYEARS@ by Terrapin Communications, Inc.
 ## All rights reserved.
 ##
-## This software may be freely copied, modified and redistributed
-## without fee for non-commerical purposes provided that this license
-## remains intact and unmodified with any RANCID distribution.
+## This code is derived from software contributed to and maintained by
+## Terrapin Communications, Inc. by Henry Kilmer, John Heasley, Andrew Partan,
+## Pete Whiting, Austin Schutz, and Andrew Fort.
 ##
-## There is no warranty or other guarantee of fitness of this software.
-## It is provided solely "as is".  The author(s) disclaim(s) all
-## responsibility and liability with respect to this software's usage
-## or its effect upon hardware, computer systems, other software, or
-## anything else.
+## Redistribution and use in source and binary forms, with or without
+## modification, are permitted provided that the following conditions
+## are met:
+## 1. Redistributions of source code must retain the above copyright
+##    notice, this list of conditions and the following disclaimer.
+## 2. Redistributions in binary form must reproduce the above copyright
+##    notice, this list of conditions and the following disclaimer in the
+##    documentation and/or other materials provided with the distribution.
+## 3. All advertising materials mentioning features or use of this software
+##    must display the following acknowledgement:
+##        This product includes software developed by Terrapin Communications,
+##        Inc. and its contributors for RANCID.
+## 4. Neither the name of Terrapin Communications, Inc. nor the names of its
+##    contributors may be used to endorse or promote products derived from
+##    this software without specific prior written permission.
+## 5. It is requested that non-binding fixes and modifications be contributed
+##    back to Terrapin Communications, Inc.
 ##
-## Except where noted otherwise, rancid was written by and is maintained by
-## Henry Kilmer, John Heasley, Andrew Partan, Pete Whiting, and Austin Schutz.
-##
+## THIS SOFTWARE IS PROVIDED BY Terrapin Communications, INC. AND CONTRIBUTORS
+## ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+## TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+## PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE COMPANY OR CONTRIBUTORS
+## BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+## CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+## SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+## INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+## CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+## POSSIBILITY OF SUCH DAMAGE.
 #
-# The login expect scripts were based on Erik Sherk's gwtn, by permission.
+#  The expect login scripts were based on Erik Sherk's gwtn, by permission.
 #
 # wlogin - Cisco Wireless Lan Controller login
 #
@@ -34,9 +55,9 @@
 #
 
 # Usage line
-set usage "Usage: $argv0 \[-autoenable\] \[-noenable\] \[-c command\] \
+set usage "Usage: $argv0 \[-dSV\] \[-autoenable\] \[-noenable\] \[-c command\] \
 \[-Evar=x\] \[-e enable-password\] \[-f cloginrc-file\] \[-p user-password\] \
-\[-s script-file\] \[-t timeout\] \[-u username\] \
+\[-r passphrase\] \[-s script-file\] \[-t timeout\] \[-u username\] \
 \[-v vty-password\] \[-w enable-username\] \[-x command-file\] \
 \[-y ssh_cypher_type\] router \[router...\]\n"
 
@@ -107,6 +128,10 @@ for {set i 0} {$i < $argc} {incr i} {
 		set passwd [ lindex $argv $i ]
 	    }
 	    set do_passwd 0
+	# Version string
+	} -V* {
+	    send_user "@PACKAGE@ @VERSION@\n"
+	    exit 0
 	# Enable Username
 	} -w* -
 	-W* {
@@ -151,6 +176,9 @@ for {set i 0} {$i < $argc} {incr i} {
 		exit 1
 	    }
 	    set do_script 1
+	# save config on exit
+	} -S* {
+	    set do_saveconfig 1
 	# 'ssh -c' cypher type
 	} -y* -
 	-Y* {
@@ -298,26 +326,29 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
     foreach prog [lrange $cmethod 0 end] {
 	incr progs -1
 	if [string match "telnet*" $prog] {
-	    regexp {telnet(:([^[:space:]]+))*} $prog command suffix port
+	    regexp {telnet(:([^[:space:]]+))*} $prog methcmd suffix port
 	    if {"$port" == ""} {
-		set retval [ catch {spawn telnet $router} reason ]
+		set retval [catch {spawn telnet $router} reason]
 	    } else {
-		set retval [ catch {spawn telnet $router $port} reason ]
+		set retval [catch {spawn telnet $router $port} reason]
 	    }
 	    if { $retval } {
 		send_user "\nError: telnet failed: $reason\n"
 		return 1
 	    }
 	} elseif [string match "ssh*" $prog] {
-	    regexp {ssh(:([^[:space:]]+))*} $prog command suffix port
-	    if {"$port" == ""} {
-		set retval [ catch {spawn $sshcmd -c $cyphertype -x -l $user $router} reason ]
-
-	    } else {
-		set retval [ catch {spawn $sshcmd -c $cyphertype -x -l $user -p $port $router} reason ]
+	    # ssh to the router & try to login with or without an identfile.
+	    regexp {ssh(:([^[:space:]]+))*} $prog methcmd suffix port
+	    set cmd $sshcmd
+	    if {"$port" != ""} {
+		set cmd "$cmd -p $port"
+	    } 
+	    if {"$identfile" != ""} {  
+		set cmd "$cmd -i $identfile"
 	    }
+	    set retval [catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason]
 	    if { $retval } {
-		send_user "\nError: $sshcmd failed: $reason\n"
+		send_user "\nError: $cmd failed: $reason\n"
 		return 1
 	    }
 	} elseif ![string compare $prog "rsh"] {
@@ -334,7 +365,10 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
 		continue;
 	    }
 
-	    set commands [split $command \;]
+	    set sep "\\1\u001"
+	    regsub -all {([^\\])\;} $command "$sep" esccommand   
+	    set sep "\u001"
+	    set commands [split $esccommand $sep]
 	    set num_commands [llength $commands]
 	    set rshfail 0
 	    for {set i 0} {$i < $num_commands && !$rshfail} { incr i} {
@@ -588,60 +622,29 @@ proc run_commands { prompt command } {
 
     # this is the only way i see to get rid of more prompts in o/p..grrrrr
     log_user 0
-    # Is this a multi-command?
-    if [ string match "*\;*" "$command" ] {
-	set commands [split $command \;]
-	set num_commands [llength $commands]
-	# the pager can not be turned off on the PIX, so we have to look
-	# for the "More" prompt.  the extreme is equally obnoxious, with a
-	# global switch in the config.
-	for {set i 0} {$i < $num_commands} { incr i} {
-	    send "[subst -nocommands [lindex $commands $i]]\r"
-	    expect {
-		-re "\b+"			{ exp_continue }
-		-re "^\[^\n\r *]*$reprompt"	{ send_user -- "$expect_out(buffer)"
-						}
-		-re "^\[^\n\r]*$reprompt."	{ send_user -- "$expect_out(buffer)"
-						  exp_continue }
-		-re "^--More--\r\n"		{ # specific match c1900 pager
-						  send " "
-						  exp_continue }
-		-re "\[\n\r]+"			{ send_user -- "$expect_out(buffer)"
-						  exp_continue }
-		-re "\[^\r\n]*Press <SPACE> to cont\[^\r\n]*"	{
-						  send " "
-						  # bloody ^[[2K after " "
-						  expect {
-							-re "^\[^\r\n]*\r" {}
-							}
-						  exp_continue
-						}
-		-re "^ *--More--\[^\n\r]*"	{
-						  send " "
-						  exp_continue }
-		-re "^<-+ More -+>\[^\n\r]*"	{
-						  send_user -- "$expect_out(buffer)"
-						  send " "
-						  exp_continue }
-	    }
-	}
-    } else {
-	# the pager can not be turned off on the PIX, so we have to look
-	# for the "More" prompt.  the extreme is equally obnoxious, with a
-	# global switch in the config.
-	send "[subst -nocommands $command]\r"
+
+    set sep "\\1\u001"
+    regsub -all {([^\\])\;} $command "$sep" esccommand
+    set sep "\u001"
+    set commands [split $esccommand $sep]
+    set num_commands [llength $commands]
+    # the pager can not be turned off on the PIX, so we have to look
+    # for the "More" prompt.  the extreme is equally obnoxious, with a
+    # global switch in the config.
+    for {set i 0} {$i < $num_commands} { incr i} {
+	send "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
-		-re "\b+"			{ exp_continue }
-		-re "^\[^\n\r *]*$reprompt"	{ send_user -- "$expect_out(buffer)"
+	    -re "\b+"				{ exp_continue }
+	    -re "^\[^\n\r *]*$reprompt"		{ send_user -- "$expect_out(buffer)"
 						}
-		-re "^\[^\n\r]*$reprompt."	{ send_user -- "$expect_out(buffer)"
+	    -re "^\[^\n\r]*$reprompt."		{ send_user -- "$expect_out(buffer)"
 						  exp_continue }
-		-re "^--More--\r\n"		{ # specific match c1900 pager
+	    -re "^--More--\r\n"			{ # specific match c1900 pager
 						  send " "
 						  exp_continue }
-		-re "\[\n\r]+"			{ send_user -- "$expect_out(buffer)"
+	    -re "\[\n\r]+"			{ send_user -- "$expect_out(buffer)"
 						  exp_continue }
-		-re "\[^\r\n]*Press <SPACE> to cont\[^\r\n]*"	{
+	    -re "\[^\r\n]*Press <SPACE> to cont\[^\r\n]*"	{
 						  send " "
 						  # bloody ^[[2K after " "
 						  expect {
@@ -649,10 +652,10 @@ proc run_commands { prompt command } {
 							}
 						  exp_continue
 						}
-		-re "^ *--More--\[^\n\r]*"	{
+	    -re "^ *--More--\[^\n\r]*"		{
 						  send " "
 						  exp_continue }
-		-re "^<-+ More -+>\[^\n\r]*"	{
+	    -re "^<-+ More -+>\[^\n\r]*"	{
 						  send_user -- "$expect_out(buffer)"
 						  send " "
 						  exp_continue }
@@ -660,19 +663,18 @@ proc run_commands { prompt command } {
     }
     log_user 1
 
-#Send an Unconditional CTRL Z to exit out of any context the WLC prompt may be in
-
-	send "\032"
+    # Send an Unconditional CTRL Z to exit out of any context the WLC prompt
+    # may be in
+    send "\032"
    
- expect {
-	-re "(.+)>"		{
-						  # the Cisco CE and Jnx ERX
+    expect {
+	-re "(.+)>"				{ # the Cisco CE and Jnx ERX
 						  # return to non-enabled mode
 						  # on exit in enabled mode.
 						  send "logout\r"
 						  exp_continue;
 						}
-	-re "Would you like to save them .+" {
+	-re "Would you like to save them .+"	{
 						  send "n\r"
 						  exp_continue
 						}
