--- a/rancid/lib/Makefile.am
+++ b/rancid/lib/Makefile.am
@@ -12,7 +12,7 @@ AUTOMAKE_OPTIONS=foreign no-dependencies
 
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm arbor.pm dell.pm eos.pm foundry.pm ios.pm iosxr.pm \
-		 junos.pm mrv.pm
+		 junos.pm mrv.pm nxos.pm
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 
 RANLIB= :
@@ -63,3 +63,4 @@ iosxr.pm: iosxr.pm.in
 junos.pm: junos.pm.in
 rancid.pm: rancid.pm.in
 mrv.pm: mrv.pm.in
+nxos.pm: nxos.pm.in
