--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -100,9 +100,8 @@ DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(srcdir)/nxrancid.in $(srcdir)/prancid.in \
 	$(srcdir)/rivlogin.in $(srcdir)/rivrancid.in \
 	$(srcdir)/rrancid.in $(srcdir)/srancid.in $(srcdir)/tlogin.in \
-	$(srcdir)/tntlogin.in $(srcdir)/tntrancid.in \
 	$(srcdir)/trancid.in $(srcdir)/xilogin.in \
-	$(srcdir)/xirancid.in $(srcdir)/xrancid.in \
+	$(srcdir)/xirancid.in $(srcdir)/xrancid.in $(srcdir)/wlogin.in \
 	$(srcdir)/zrancid.in $(top_srcdir)/depcomp
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
@@ -117,8 +116,8 @@ CONFIG_CLEAN_FILES = control_rancid agmrancid alogin arancid anlogin \
 	f10rancid flogin fnlogin fnrancid hlogin hrancid htlogin \
 	htrancid jlogin jerancid mrancid mrvlogin mtrancid mtlogin \
 	nlogin nrancid nslogin nsrancid nxrancid prancid rivlogin \
-	rivrancid rrancid srancid tlogin tntlogin tntrancid trancid \
-	xilogin xirancid xrancid zrancid
+	rivrancid rrancid srancid tlogin trancid xilogin xirancid \
+	xrancid wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -340,10 +339,10 @@ bin_SCRIPTS = agmrancid alogin anlogin anrancid arancid arrancid \
 	control_rancid cssrancid dllogin elogin erancid f5rancid \
 	f10rancid flogin fnlogin fnrancid hlogin hrancid htlogin \
 	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin nrancid nslogin nsrancid nxrancid prancid rancid \
-	rivlogin rivrancid rrancid slogin srancid tlogin tntlogin \
-	tntrancid trancid xilogin xirancid xrancid zrancid lg.cgi \
-	lgform.cgi rancid-cvs rancid-fe rancid-run
+	nlogin nrancid nslogin nsrancid prancid rancid rivlogin \
+	rivrancid rrancid slogin srancid tlogin trancid xilogin \
+	xirancid xrancid zrancid lg.cgi lgform.cgi rancid-cvs \
+	rancid-fe rancid-run
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
 bin_in = rancid.in slogin.in
 EXTRA_DIST = lg.cgi.in lgform.cgi.in rancid-cvs.in rancid-fe.in rancid-run.in \
@@ -508,10 +507,6 @@ srancid: $(top_builddir)/config.status $(srcdir)/srancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 tlogin: $(top_builddir)/config.status $(srcdir)/tlogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-tntlogin: $(top_builddir)/config.status $(srcdir)/tntlogin.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-tntrancid: $(top_builddir)/config.status $(srcdir)/tntrancid.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 trancid: $(top_builddir)/config.status $(srcdir)/trancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 xilogin: $(top_builddir)/config.status $(srcdir)/xilogin.in
@@ -519,6 +514,8 @@ xilogin: $(top_builddir)/config.status $(srcdir)/xilogin.in
 xirancid: $(top_builddir)/config.status $(srcdir)/xirancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 xrancid: $(top_builddir)/config.status $(srcdir)/xrancid.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+wlogin: $(top_builddir)/config.status $(srcdir)/wlogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 zrancid: $(top_builddir)/config.status $(srcdir)/zrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
