--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -258,7 +258,7 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm arbor.pm dell.pm eos.pm foundry.pm ios.pm iosxr.pm \
-		 junos.pm mrv.pm
+		 junos.pm mrv.pm nxos.pm
 
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 RANLIB = :
@@ -515,6 +515,7 @@ iosxr.pm: iosxr.pm.in
 junos.pm: junos.pm.in
 rancid.pm: rancid.pm.in
 mrv.pm: mrv.pm.in
+nxos.pm: nxos.pm.in
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
